--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="footer" id="tq-footer">Made in a hurry by <a href="http://taqtile.com.br" target="_blank"> <img
                     class="tq-logo" src="./public/images/taqtile-horizontal.png" /></a></div>
     </div>
-    <script src="bower_components/easytimer.js/dist/easytimer.min.js"></script>
+    <script src="./bower_components/easytimer.js/dist/easytimer.min.js"></script>
     <script src="./public/js/taq-timer.js"></script>
     <script>
         var timerInstance = new Timer(),
